--- a/blog-desctop.html
+++ b/blog-desctop.html
@@ -13,21 +13,21 @@
         <div class="container">
             <div class="header__header">
                 <div class="header__logo">
-                    <a href="/index.html"><img src="./assets/images/game-logo.png" alt=""></a>
+                    <a href="index.html"><img src="./assets/images/game-logo.png" alt=""></a>
                 </div>
                 <div class="header__text">
                     <ul class="header__list">
                         <li class="header__title">
-                            <a href="/tournaments.html">Чемпионаты</a>
+                            <a href="tournaments.html">Чемпионаты</a>
                         </li>
                         <li class="header__title">
-                            <a href="/team-list.html">Команды</a>
+                            <a href="team-list.html">Команды</a>
                         </li>
                         <li class="header__title">
-                            <a href="/partners-list-desctop.html">Партнерки</a>
+                            <a href="partners-list-desctop.html">Партнерки</a>
                         </li>
                         <li class="header__title">
-                            <a href="/blog-desctop.html">Блог</a>
+                            <a href="blog-desctop.html">Блог</a>
                         </li>
                     </ul>
                     <img class="header__icon" src="./assets/images/icons/lupa.png" alt="">
@@ -77,7 +77,7 @@
             <div class="blog__block">
                 <div class="blog__items">
                     <ul class="blog__list">
-                        <a href="/blog-single-desctop-final.html"><li class="blog__title">Все новости</li></a>
+                        <a href="blog-single-desctop-final.html"><li class="blog__title">Все новости</li></a>
                         <li class="blog__sub-title">LoL</li>
                         <li class="blog__sub-title">Dota 2</li>
                         <li class="blog__sub-title">PUBG</li>
@@ -94,7 +94,7 @@
                                 </div>
                                 <p class="game-news__title">Game Name</p>
                                 <h3 class="game-news__sub-title">
-                                    <a href="/blog-single-desctop-final.html">Viewership results for Clash of Clans World Championship 2020 qualifiers</a>
+                                    <a href="blog-single-desctop-final.html">Viewership results for Clash of Clans World Championship 2020 qualifiers</a>
                                 </h3>
                                 <span class="game-news__text">14 ноября, 2020</span>
                             </div>
