--- a/partners-list-desctop.html
+++ b/partners-list-desctop.html
@@ -12,21 +12,21 @@
         <div class="container">
             <div class="header__header">
                 <div class="header__logo">
-                    <a href="/index.html"><img src="./assets/images/game-logo.png" alt=""></a>
+                    <a href="index.html"><img src="./assets/images/game-logo.png" alt=""></a>
                 </div>
                 <div class="header__text">
                     <ul class="header__list">
                         <li class="header__title">
-                            <a href="/tournaments.html">Чемпионаты</a>
+                            <a href="tournaments.html">Чемпионаты</a>
                         </li>
                         <li class="header__title">
-                            <a href="/team-list.html">Команды</a>
+                            <a href="team-list.html">Команды</a>
                         </li>
                         <li class="header__title">
-                            <a href="/partners-list-desctop.html">Партнерки</a>
+                            <a href="partners-list-desctop.html">Партнерки</a>
                         </li>
                         <li class="header__title">
-                            <a href="/blog-desctop.html">Блог</a>
+                            <a href="blog-desctop.html">Блог</a>
                         </li>
                     </ul>
                     <img class="header__icon" src="./assets/images/icons/lupa.png" alt="">
